Created home and products-list component @ shop

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,1 +1,4 @@
-<oneshop-web-nx-welcome></oneshop-web-nx-welcome>
+<!-- <oneshop-web-nx-welcome></oneshop-web-nx-welcome> -->
+<oneshop-web-home></oneshop-web-home>
+
+<oneshop-web-products-list></oneshop-web-products-list>
