Created page Routes and router-outlet output

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,4 +1,2 @@
-<!-- <oneshop-web-nx-welcome></oneshop-web-nx-welcome> -->
-<oneshop-web-home></oneshop-web-home>
-
-<oneshop-web-products-list></oneshop-web-products-list>
+<!-- this mark, where to insert the component based on route specified on RouterModule.forRoot-->
+<router-outlet></router-outlet>
