Added Header and footer at App Component as Master page

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,2 +1,6 @@
-<!-- this mark, where to insert the component based on route specified on RouterModule.forRoot-->
+<oneshop-web-header></oneshop-web-header>
+
+<!-- this mark, is where to insert the component based on route specified on RouterModule.forRoot by user-->
 <router-outlet></router-outlet>
+
+<oneshop-web-footer></oneshop-web-footer>
