Changed to app based component selector naming rule prefix at eslintrc

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,6 +1,5 @@
-<oneshop-web-header></oneshop-web-header>
-
+<shop-header></shop-header>
 <!-- this mark, is where to insert the component based on route specified on RouterModule.forRoot by user-->
 <router-outlet></router-outlet>
 
-<oneshop-web-footer></oneshop-web-footer>
+<shop-footer></shop-footer>
