Create lib component and use in shop app sample

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -2,4 +2,6 @@
 <!-- this mark, is where to insert the component based on route specified on RouterModule.forRoot by user-->
 <router-outlet></router-outlet>
 
+<lib-ui-banner></lib-ui-banner>
+
 <shop-footer></shop-footer>
