--- a/apps/shop/src/styles.scss
+++ b/apps/shop/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+// Import Css from glovals shared styles
+@import '../../../styles/globals';
