Styles setup with PrimeNg

--- a/apps/admin/src/app/app.component.html
+++ b/apps/admin/src/app/app.component.html
@@ -1,2 +1,2 @@
-<oneshop-web-nx-welcome></oneshop-web-nx-welcome>
 <router-outlet></router-outlet>
+<p-button label="Click" styleClass="p-button-sm"></p-button>
