--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -4,6 +4,6 @@
 
 <lib-ui-banner></lib-ui-banner>
 
-<p class="text-red">class from global shared scss</p>
+<p-button label="Click" styleClass="p-button-sm"></p-button>
 
 <shop-footer></shop-footer>
