--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
-.text-red {
-  color: red;
-}
+// angular.json file if exist otherwise in global scss
+@import url('~primeicons/primeicons.css');
+@import url('~primeng/resources/themes/lara-light-blue/theme.css');
+@import url('~primeng/resources/primeng.min.css');
