--- a/apps/admin/src/app/components/category/category-list/category-list.component.html
+++ b/apps/admin/src/app/components/category/category-list/category-list.component.html
@@ -1,5 +1,39 @@
-<div class="w-full grid grid-cols-1 xl:grid-cols-2 2xl:grid-cols-3 gap-4">
-  <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 2xl:col-span-2">
-    <h3 class="text-base font-normal text-gray-500 font-bold">Category List</h3>
-  </div>
+<div class="w-full grid grid-cols-1 gap-4">
+  <!-- <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 2xl:col-span-2"> -->
+  <p-card header="Category" subheader="List of Categories" styleClass="">
+    <div class="grid">
+      <div class="p-toolbar-group-left">
+        <p-button
+          label="New"
+          icon="pi pi-plus"
+          styleClass="bg-indigo-600 p-button-sm"
+          size="small"
+        ></p-button>
+      </div>
+    </div>
+
+    <div class="grid pt-5">
+      <p-table
+        [value]="categories"
+        styleClass="p-datatable-gridlines"
+        [tableStyle]="{ 'min-width': '5rem' }"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Quantity</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-category>
+          <tr>
+            <td>{{ category.id }}</td>
+            <td>{{ category.name }}</td>
+            <td>{{ category.quantity }}</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </p-card>
+  <!-- </div> -->
 </div>
