--- a/apps/admin/src/app/pages/shell/shell.component.html
+++ b/apps/admin/src/app/pages/shell/shell.component.html
@@ -49,7 +49,7 @@
               class="h-6 mr-2"
               alt="Windster Logo"
             />
-            <span class="self-center whitespace-nowrap">Windster</span>
+            <span class="self-center whitespace-nowrap">OneShop Admin</span>
           </a>
           <form action="#" method="GET" class="hidden lg:block lg:pl-32">
             <label for="topbar-search" class="sr-only">Search</label>
@@ -100,23 +100,7 @@
               ></path>
             </svg>
           </button>
-          <div class="hidden lg:flex items-center">
-            <span class="text-base font-normal text-gray-500 mr-5"
-              >Open source ❤️</span
-            >
-            <div class="-mb-1">
-              <a
-                class="github-button"
-                href="#"
-                data-color-scheme="no-preference: dark; light: light; dark: light;"
-                data-icon="octicon-star"
-                data-size="large"
-                data-show-count="true"
-                aria-label="Star themesberg/windster-tailwind-css-dashboard on GitHub"
-                >Star</a
-              >
-            </div>
-          </div>
+
           <a
             href="#"
             class="hidden sm:inline-flex ml-5 text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3"
