Use Category Service  in Category List Component

--- a/apps/admin/src/app/components/category/category-list/category-list.component.html
+++ b/apps/admin/src/app/components/category/category-list/category-list.component.html
@@ -22,14 +22,14 @@
           <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Quantity</th>
+            <th>Color</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-category>
           <tr>
-            <td>{{ category.id }}</td>
+            <td>{{ category._id }}</td>
             <td>{{ category.name }}</td>
-            <td>{{ category.quantity }}</td>
+            <td>{{ category.color }}</td>
           </tr>
         </ng-template>
       </p-table>
