Bind Form to data - reactive forms

--- a/apps/admin/src/app/components/category/category-list/category-list.component.html
+++ b/apps/admin/src/app/components/category/category-list/category-list.component.html
@@ -8,6 +8,7 @@
           icon="pi pi-plus"
           styleClass="bg-indigo-600 p-button-sm"
           size="small"
+          routerLink="/category/new"
         ></p-button>
       </div>
     </div>
