--- a/apps/admin/src/app/components/category/category-form/category-form.component.html
+++ b/apps/admin/src/app/components/category/category-form/category-form.component.html
@@ -1,3 +1,5 @@
+<p-toast></p-toast>
+
 <div class="w-full grid grid-cols-1 gap-4">
   <!-- <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 2xl:col-span-2"> -->
 
