--- a/apps/admin/src/app/components/category/category-list/category-list.component.html
+++ b/apps/admin/src/app/components/category/category-list/category-list.component.html
@@ -1,3 +1,12 @@
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"
+  acceptButtonStyleClass="p-button-text"
+></p-confirmDialog>
+
+<p-toast></p-toast>
+
 <div class="w-full grid grid-cols-1 gap-4">
   <!-- <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 2xl:col-span-2"> -->
   <p-card header="Category" subheader="List of Categories" styleClass="">
@@ -24,6 +33,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>Color</th>
+            <th></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-category>
@@ -31,6 +41,23 @@
             <td>{{ category._id }}</td>
             <td>{{ category.name }}</td>
             <td>{{ category.color }}</td>
+
+            <td>
+              <p-button
+                (onClick)="editCategory(category._id)"
+                label=""
+                icon="pi pi-file-edit"
+                styleClass="p-button-warning p-button-sm mr-5"
+                size="small"
+              ></p-button>
+              <p-button
+                (onClick)="deleteCategory(category._id)"
+                label=""
+                icon="pi pi-trash"
+                styleClass="p-button-danger p-button-sm"
+                size="small"
+              ></p-button>
+            </td>
           </tr>
         </ng-template>
       </p-table>
