--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,3 +2,7 @@
 @import url('~primeicons/primeicons.css');
 @import url('~primeng/resources/themes/tailwind-light/theme.css');
 @import url('~primeng/resources/primeng.min.css');
+
+.p-button {
+  background-color: #4f46e5 !important;
+}
