Added Add New Product function on Admin shop

--- a/apps/admin/src/app/components/products/products-form/products-form.component.html
+++ b/apps/admin/src/app/components/products/products-form/products-form.component.html
@@ -157,7 +157,6 @@
           <input
             class="p-button-sm !flex"
             type="file"
-            formControlName="image"
             accept="image/*"
             (change)="onImageUpload($event)"
           />
@@ -168,7 +167,7 @@
           <small
             *ngIf="
               (form.controls.image.touched || isSubmitted) &&
-              form.controls.image.invalid
+              form.controls.image.value === null
             "
             class="p-error"
             >Image is Required</small
