Added Submit Product Edit and Delete  on Admin Shop

--- a/apps/admin/src/app/components/products/products-list/products-list.component.html
+++ b/apps/admin/src/app/components/products/products-list/products-list.component.html
@@ -56,14 +56,14 @@
 
             <td>
               <p-button
-                (onClick)="editProducts(product._id)"
+                (onClick)="editProduct(product._id)"
                 label=""
                 icon="pi pi-file-edit"
                 styleClass="p-button-warning p-button-sm mr-5"
                 size="small"
               ></p-button>
               <p-button
-                (onClick)="deleteProducts(product._id)"
+                (onClick)="deleteProduct(product._id)"
                 label=""
                 icon="pi pi-trash"
                 styleClass="p-button-danger p-button-sm"
