--- a/apps/admin/src/app/components/products/products-list/products-list.component.html
+++ b/apps/admin/src/app/components/products/products-list/products-list.component.html
@@ -49,7 +49,9 @@
         <ng-template pTemplate="body" let-product>
           <tr>
             <td>{{ product.name }}</td>
-            <td>{{ product.image }}</td>
+            <td>
+              <img [src]="product.image" alt="" class="h-20" />
+            </td>
             <td>{{ product.brand }}</td>
             <td>{{ product.price }}</td>
             <td>{{ product.stock }}</td>
