--- a/apps/admin/src/app/components/products/products-list/products-list.component.html
+++ b/apps/admin/src/app/components/products/products-list/products-list.component.html
@@ -25,6 +25,11 @@
     <div class="grid pt-5">
       <p-table
         [value]="products"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10, 20, 30]"
         styleClass="p-datatable-gridlines"
         [tableStyle]="{ 'min-width': '5rem' }"
       >
