Fix User Update and Delete at Admin Shop

--- a/apps/admin/src/app/components/users/users-form/users-form.component.html
+++ b/apps/admin/src/app/components/users/users-form/users-form.component.html
@@ -8,7 +8,7 @@
     icon="pi pi-angle-left"
     styleClass="p-button-secondary p-button-sm"
     size="small"
-    routerLink="/category"
+    routerLink="/users"
   ></p-button>
 
   <p-card
@@ -58,6 +58,9 @@
 
         <div class="p-field pb-5">
           <label for="password">Password</label>
+          <small class="italic"
+            >Password not shown, Enter new password to update</small
+          >
           <input
             formControlName="password"
             id="password"
