--- a/apps/admin/src/app/components/users/users-list/users-list.component.html
+++ b/apps/admin/src/app/components/users/users-list/users-list.component.html
@@ -57,14 +57,14 @@
 
             <td>
               <p-button
-                (onClick)="editUsers(category._id)"
+                (onClick)="editUser(category._id)"
                 label=""
                 icon="pi pi-file-edit"
                 styleClass="p-button-warning p-button-sm mr-5"
                 size="small"
               ></p-button>
               <p-button
-                (onClick)="deleteUsers(category._id)"
+                (onClick)="deleteUser(category._id)"
                 label=""
                 icon="pi pi-trash"
                 styleClass="p-button-danger p-button-sm"
