Added Orders Service and  List at Admin Page, Fixed Font Size and Navigation

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,8 +1,8 @@
 // angular.json file if exist otherwise in global scss
-@import url('~primeicons/primeicons.css');
 @import url('~primeng/resources/themes/tailwind-light/theme.css');
 @import url('~primeng/resources/primeng.min.css');
+@import url('~primeicons/primeicons.css');
 
-.p-button {
-  background-color: #4f46e5 !important;
+html {
+  font-size: 14px !important;
 }
