--- a/apps/admin/src/app/components/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/components/sidebar/sidebar.component.html
@@ -43,15 +43,8 @@
               href="#"
               class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group"
             >
-              <svg
-                class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-              </svg>
+              <i class="pi pi-th-large"></i>
+
               <span class="ml-3">Dashboard</span>
             </a>
 
@@ -60,15 +53,7 @@
               routerLink="/category"
               class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group"
             >
-              <svg
-                class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-              </svg>
+              <i class="pi pi-tags"></i>
               <span class="ml-3">Categories</span>
             </a>
 
@@ -77,16 +62,17 @@
               routerLink="/products"
               class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group"
             >
-              <svg
-                class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-              </svg>
+              <i class="pi pi-shopping-bag"></i>
               <span class="ml-3">Products</span>
+            </a>
+
+            <a
+              href="#"
+              routerLink="/orders"
+              class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group"
+            >
+              <i class="pi pi-shopping-cart"></i>
+              <span class="ml-3">Orders</span>
             </a>
 
             <a
@@ -94,15 +80,7 @@
               routerLink="/users"
               class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group"
             >
-              <svg
-                class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-                <path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-              </svg>
+              <i class="pi pi-users"></i>
               <span class="ml-3">Users</span>
             </a>
           </li>
