--- a/apps/admin/src/app/components/orders/orders-details/orders-details.component.html
+++ b/apps/admin/src/app/components/orders/orders-details/orders-details.component.html
@@ -1,1 +1,62 @@
-<p>orders-details works!</p>
+<p-toast></p-toast>
+
+<div class="w-full grid grid-cols-1 gap-4">
+  <!-- <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 2xl:col-span-2"> -->
+
+  <p-button
+    label="Back"
+    icon="pi pi-angle-left"
+    styleClass="p-button-secondary p-button-sm"
+    size="small"
+    routerLink="/orders"
+  ></p-button>
+
+  <p class="pt-5 pb-10 font-bold text-2xl text-gray-700">Order Details</p>
+
+  <p-fieldset legend="Order Details" [toggleable]="true" styleClass="mb-10">
+    <div class="grid md:grid-cols-2 xl:grid-cols-3">
+      <div class="pb-5">
+        <p class="font-bold pb-5">Order Id</p>
+        <p>{{ order._id }}</p>
+      </div>
+
+      <div class="pb-5">
+        <p class="font-bold pb-5">Date Ordered</p>
+        <p>{{ order.dateOrdered | date : 'full' }}</p>
+      </div>
+
+      <div class="pb-5">
+        <p class="font-bold pb-5">Order Status</p>
+        <p>{{ order.shippingStatus | titlecase }}</p>
+      </div>
+    </div>
+  </p-fieldset>
+
+  <p-fieldset legend="Order Items" [toggleable]="true" styleClass="mb-10">
+    <p-table [value]="order.orderItems" [tableStyle]="{ 'min-width': '50rem' }">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Product Name</th>
+          <th>Brand</th>
+          <th>Category</th>
+          <th>Price</th>
+          <th>Quantity</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-order>
+        <tr>
+          <td>{{ order.product.name }}</td>
+          <td>{{ order.product.brand }}</td>
+          <td>{{ order.product.category }}</td>
+          <td>{{ order.product.price }}</td>
+          <td>{{ order.quantity }}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-fieldset>
+
+  <p-fieldset legend="Shipping Address" [toggleable]="true" styleClass="mb-10">
+    Content
+  </p-fieldset>
+  <!-- </div> -->
+</div>
