--- a/apps/admin/src/app/components/orders/orders-list/orders-list.component.html
+++ b/apps/admin/src/app/components/orders/orders-list/orders-list.component.html
@@ -31,8 +31,8 @@
               <p-button
                 (onClick)="showOrderDetails(order._id)"
                 label=""
-                icon="pi pi-file-edit"
-                styleClass="p-button-warning p-button-sm mr-5"
+                icon="pi pi-eye"
+                styleClass="p-button-info p-button-sm mr-5"
                 size="small"
               ></p-button>
             </td>
