--- a/apps/admin/src/styles.scss
+++ b/apps/admin/src/styles.scss
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* You can add global styles to this file, and also import other style files */
-@import '../../../styles/globals';
+@import '../../../styles/globals.scss';
 
 .p-field * {
   display: block;
