--- a/apps/admin/src/app/components/sidebar/sidebar.component.html
+++ b/apps/admin/src/app/components/sidebar/sidebar.component.html
@@ -31,7 +31,7 @@
                   type="text"
                   name="email"
                   id="mobile-search"
-                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-cyan-600 focus:ring-cyan-600 block w-full pl-10 p-2.5"
+                  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-cyan-600 block w-full pl-10 p-2.5"
                   placeholder="Search"
                 />
               </div>
