--- a/apps/admin/src/app/pages/shell/shell.component.html
+++ b/apps/admin/src/app/pages/shell/shell.component.html
@@ -3,8 +3,7 @@
 
 <div class="content"></div>
 
-<!-- component -->
-<!-- This is an example component -->
+<!-- Mavigation bar -->
 <div class="bg-gray-50">
   <nav class="bg-white border-b border-gray-200 fixed z-30 w-full">
     <div class="px-3 py-3 lg:px-5 lg:pl-3">
@@ -101,27 +100,13 @@
             </svg>
           </button>
 
-          <a
-            href="#"
-            class="hidden sm:inline-flex ml-5 text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center items-center mr-3"
-          >
-            <svg
-              class="svg-inline--fa fa-gem -ml-1 mr-2 h-4 w-4"
-              aria-hidden="true"
-              focusable="false"
-              data-prefix="fas"
-              data-icon="gem"
-              role="img"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 512 512"
-            >
-              <path
-                fill="currentColor"
-                d="M378.7 32H133.3L256 182.7L378.7 32zM512 192l-107.4-141.3L289.6 192H512zM107.4 50.67L0 192h222.4L107.4 50.67zM244.3 474.9C247.3 478.2 251.6 480 256 480s8.653-1.828 11.67-5.062L510.6 224H1.365L244.3 474.9z"
-              ></path>
-            </svg>
-            Upgrade to Pro
-          </a>
+          <p-button
+            label="Logout"
+            icon="pi pi-sign-out"
+            styleClass="bg-gray-600 p-button-sm"
+            size="small"
+            (onClick)="logout()"
+          ></p-button>
         </div>
       </div>
     </div>
