Added Home Page Content and Structure at Shop

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,9 +1,3 @@
-<shop-header></shop-header>
-<!-- this mark, is where to insert the component based on route specified on RouterModule.forRoot by user-->
-<router-outlet></router-outlet>
-
-<lib-ui-banner></lib-ui-banner>
-
-<p-button label="Click" styleClass="p-button-sm"></p-button>
+<shop-home></shop-home>
 
 <shop-footer></shop-footer>
