--- a/apps/shop/src/app/pages/home/home.component.html
+++ b/apps/shop/src/app/pages/home/home.component.html
@@ -75,133 +75,28 @@
     <!-- category filter side -->
     <div class="bg-white">
       <div>
-        <!--
-      Mobile filter dialog
-
-      Off-canvas filters for mobile, show/hide based on off-canvas filters state.
-    -->
-        <div class="relative z-40 lg:hidden" role="dialog" aria-modal="true">
-          <!--
-        Off-canvas menu backdrop, show/hide based on off-canvas menu state.
-
-        Entering: "transition-opacity ease-linear duration-300"
-          From: "opacity-0"
-          To: "opacity-100"
-        Leaving: "transition-opacity ease-linear duration-300"
-          From: "opacity-100"
-          To: "opacity-0"
-      -->
-          <div class="fixed inset-0 bg-black bg-opacity-25"></div>
-
-          <div class="fixed inset-0 z-40 flex">
-            <!--
-          Off-canvas menu, show/hide based on off-canvas menu state.
-
-          Entering: "transition ease-in-out duration-300 transform"
-            From: "translate-x-full"
-            To: "translate-x-0"
-          Leaving: "transition ease-in-out duration-300 transform"
-            From: "translate-x-0"
-            To: "translate-x-full"
-        -->
-
-            <div
-              class="relative ml-auto flex h-full w-full max-w-xs flex-col overflow-y-auto bg-white py-4 pb-12 shadow-xl"
-            >
-              <div class="flex items-center justify-between px-4">
-                <h2 class="text-lg font-medium text-gray-900">Filters</h2>
-                <button
-                  type="button"
-                  class="-mr-2 flex h-10 w-10 items-center justify-center rounded-md bg-white p-2 text-gray-400"
-                >
-                  <span class="sr-only">Close menu</span>
-                  <!-- Heroicon name: outline/x-mark -->
-                  <svg
-                    class="h-6 w-6"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    aria-hidden="true"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="M6 18L18 6M6 6l12 12"
-                    />
-                  </svg>
-                </button>
-              </div>
-
-              <!-- Filters -->
-              <form class="mt-4 border-t border-gray-200">
-                <h3 class="sr-only">Categories</h3>
-                <ul role="list" class="px-2 py-3 font-medium text-gray-900">
-                  <li>
-                    <a href="#" class="block px-2 py-3">Totes</a>
-                  </li>
-
-                  <li>
-                    <a href="#" class="block px-2 py-3">Backpacks</a>
-                  </li>
-
-                  <li>
-                    <a href="#" class="block px-2 py-3">Travel Bags</a>
-                  </li>
-
-                  <li>
-                    <a href="#" class="block px-2 py-3">Hip Bags</a>
-                  </li>
-
-                  <li>
-                    <a href="#" class="block px-2 py-3">Laptop Sleeves</a>
-                  </li>
-                </ul>
-              </form>
-            </div>
-          </div>
-        </div>
+        <oneshop-web-category-filter></oneshop-web-category-filter>
 
         <main class="mx-auto px-4 sm:px-6 lg:px-16 pt-12">
           <div
-            class="flex items-baseline justify-between border-gray-200 pt-24 pb-6"
+            class="flex items-baseline justify-between border-gray-200 pt-24 lg:pt-10 pb-6"
           ></div>
-
-          <div class="grid grid-cols-1 gap-x-8 gap-y-10 lg:grid-cols-4">
-            <!-- Filters -->
-            <div class="hidden lg:block">
-              <h3 class="pb-5 border-b border-gray-300 text-md font-medium">
-                Categories
-              </h3>
-              <ul
-                role="list"
-                class="space-y-4 border-gray-200 py-6 text-gray-900"
-              >
-                <li>
-                  <a href="#">Totes</a>
-                </li>
-
-                <li>
-                  <a href="#">Backpacks</a>
-                </li>
-
-                <li>
-                  <a href="#">Travel Bags</a>
-                </li>
-
-                <li>
-                  <a href="#">Hip Bags</a>
-                </li>
-
-                <li>
-                  <a href="#">Laptop Sleeves</a>
-                </li>
-              </ul>
-            </div>
+          <div class="xl:hidden w-full col-span-1 flex justify-end pb-16">
+            <p-button
+              label="Filter Category"
+              icon="pi pi-filter"
+              styleClass="bg-black border-black p-button-sm mt-7"
+              size="small"
+            ></p-button>
+          </div>
+          <div
+            class="grid grid-cols-1 gap-x-8 gap-y-10 lg:grid-cols-4 xl:grid-cols-5"
+          >
+            <!-- Mobile category Filters -->
+            <oneshop-web-category-filter-mobile></oneshop-web-category-filter-mobile>
 
             <!-- Product grid -->
-            <div class="lg:col-span-3">
+            <div class="lg:col-span-4 xl:cols-span-5">
               <!-- Replace with your content -->
               <div class="bg-white">
                 <div
@@ -212,34 +107,14 @@
                   </h2>
 
                   <div
-                    class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8"
+                    class="mt-6 grid gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8"
                   >
-                    <div class="group relative">
-                      <div
-                        class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-80"
-                      >
-                        <img
-                          src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
-                          alt="Front of men&#039;s Basic Tee in black."
-                          class="h-full w-full object-cover object-center lg:h-full lg:w-full"
-                        />
-                      </div>
-                      <div class="mt-4 flex justify-between">
-                        <div>
-                          <h3 class="text-sm text-gray-700">
-                            <a href="#">
-                              <span
-                                aria-hidden="true"
-                                class="absolute inset-0"
-                              ></span>
-                              Basic Tee
-                            </a>
-                          </h3>
-                          <p class="mt-1 text-sm text-gray-500">Black</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$35</p>
-                      </div>
-                    </div>
+                    <oneshop-web-product-item></oneshop-web-product-item>
+                    <oneshop-web-product-item></oneshop-web-product-item>
+                    <oneshop-web-product-item></oneshop-web-product-item>
+                    <oneshop-web-product-item></oneshop-web-product-item>
+                    <oneshop-web-product-item></oneshop-web-product-item>
+                    <oneshop-web-product-item></oneshop-web-product-item>
 
                     <!-- More products... -->
                   </div>
