Dynamic Products List by loop and pass prop to @input child

--- a/apps/shop/src/app/components/products/product-item/product-item.component.html
+++ b/apps/shop/src/app/components/products/product-item/product-item.component.html
@@ -13,11 +13,11 @@
       <h3 class="text-sm text-gray-700">
         <a href="#">
           <span aria-hidden="true" class="absolute inset-0"></span>
-          Basic Tee
+          {{ product.name }}
         </a>
       </h3>
-      <p class="mt-1 text-sm text-gray-500">Black</p>
+      <p class="mt-1 text-sm text-gray-500">{{ product.category.name }}</p>
     </div>
-    <p class="text-sm font-medium text-gray-900">$35</p>
+    <p class="text-sm font-medium text-gray-900">$ {{ product.price }}</p>
   </div>
 </div>
