--- a/apps/shop/src/app/pages/home/home.component.html
+++ b/apps/shop/src/app/pages/home/home.component.html
@@ -109,13 +109,11 @@
                   <div
                     class="mt-6 grid gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8"
                   >
-                    <oneshop-web-product-item></oneshop-web-product-item>
-                    <oneshop-web-product-item></oneshop-web-product-item>
-                    <oneshop-web-product-item></oneshop-web-product-item>
-                    <oneshop-web-product-item></oneshop-web-product-item>
-                    <oneshop-web-product-item></oneshop-web-product-item>
-                    <oneshop-web-product-item></oneshop-web-product-item>
-
+                    <div *ngFor="let product of products">
+                      <oneshop-web-product-item
+                        [product]="product"
+                      ></oneshop-web-product-item>
+                    </div>
                     <!-- More products... -->
                   </div>
                 </div>
