--- a/apps/shop/src/app/components/products/product-item/product-item.component.html
+++ b/apps/shop/src/app/components/products/product-item/product-item.component.html
@@ -1,4 +1,4 @@
-<div class="group relative">
+<div class="group relative cursor-pointer" (click)="viewDetails(product._id)">
   <div
     class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-80"
   >
@@ -11,10 +11,8 @@
   <div class="mt-4 flex justify-between">
     <div>
       <h3 class="text-sm text-gray-700">
-        <a href="#">
-          <span aria-hidden="true" class="absolute inset-0"></span>
-          {{ product.name }}
-        </a>
+        <span aria-hidden="true" class="absolute inset-0"></span>
+        {{ product.name }}
       </h3>
       <p class="mt-1 text-sm text-gray-500">{{ product.category.name }}</p>
     </div>
