Dynamic Product page  fetch from home products id

--- a/apps/shop/src/app/components/products/product-item/product-item.component.html
+++ b/apps/shop/src/app/components/products/product-item/product-item.component.html
@@ -1,11 +1,11 @@
 <div class="group relative cursor-pointer" (click)="viewDetails(product._id)">
   <div
-    class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md bg-gray-200 group-hover:opacity-75 lg:aspect-none lg:h-80"
+    class="min-h-80 aspect-w-1 aspect-h-1 w-full overflow-hidden rounded-md group-hover:opacity-75 lg:aspect-none lg:h-80"
   >
     <img
-      src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+      [src]="product.image"
       alt="Front of men&#039;s Basic Tee in black."
-      class="h-full w-full object-cover object-center lg:h-full lg:w-full"
+      class="h-full w-full object-contain object-center lg:h-full lg:w-full"
     />
   </div>
   <div class="mt-4 flex justify-between">
