--- a/apps/shop/src/app/components/products/product-item/product-item.component.html
+++ b/apps/shop/src/app/components/products/product-item/product-item.component.html
@@ -16,6 +16,8 @@
       </h3>
       <p class="mt-1 text-sm text-gray-500">{{ product.category.name }}</p>
     </div>
-    <p class="text-sm font-medium text-gray-900">$ {{ product.price }}</p>
+    <p class="text-sm font-medium text-gray-900">
+      {{ product.price | currency }}
+    </p>
   </div>
 </div>
