--- a/apps/shop/src/app/components/categories/category-filter-mobile/category-filter-mobile.component.html
+++ b/apps/shop/src/app/components/categories/category-filter-mobile/category-filter-mobile.component.html
@@ -1,24 +1,75 @@
-<div class="hidden xl:block col-span-1">
-  <h3 class="pb-5 border-b border-gray-300 text-md font-medium">Categories</h3>
-  <ul role="list" class="space-y-4 border-gray-200 py-6 text-gray-900">
-    <li>
-      <a href="#">Totes</a>
-    </li>
+<!--
+      Mobile filter dialog
 
-    <li>
-      <a href="#">Backpacks</a>
-    </li>
+      Off-canvas filters for mobile, show/hide based on off-canvas filters state.
+    -->
+<div class="relative z-40 lg:hidden" role="dialog" aria-modal="true">
+  <!--
+        Off-canvas menu backdrop, show/hide based on off-canvas menu state.
+    
+        Entering: "transition-opacity ease-linear duration-300"
+          From: "opacity-0"
+          To: "opacity-100"
+        Leaving: "transition-opacity ease-linear duration-300"
+          From: "opacity-100"
+          To: "opacity-0"
+      -->
+  <div class="fixed inset-0 bg-black bg-opacity-25"></div>
 
-    <li>
-      <a href="#">Travel Bags</a>
-    </li>
+  <div class="fixed inset-0 z-40 flex">
+    <!--
+          Off-canvas menu, show/hide based on off-canvas menu state.
+    
+          Entering: "transition ease-in-out duration-300 transform"
+            From: "translate-x-full"
+            To: "translate-x-0"
+          Leaving: "transition ease-in-out duration-300 transform"
+            From: "translate-x-0"
+            To: "translate-x-full"
+        -->
 
-    <li>
-      <a href="#">Hip Bags</a>
-    </li>
+    <div
+      class="relative ml-auto flex h-full w-full max-w-xs flex-col overflow-y-auto bg-white py-4 pb-12 shadow-xl"
+    >
+      <div class="flex items-center justify-between px-4">
+        <h2 class="text-lg font-medium text-gray-900">Filters</h2>
+        <button
+          type="button"
+          class="-mr-2 flex h-10 w-10 items-center justify-center rounded-md bg-white p-2 text-gray-400"
+        >
+          <span class="sr-only">Close menu</span>
+          <!-- Heroicon name: outline/x-mark -->
+          <svg
+            class="h-6 w-6"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            aria-hidden="true"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18L18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </div>
 
-    <li>
-      <a href="#">Laptop Sleeves</a>
-    </li>
-  </ul>
+      <!-- Filters -->
+      <form class="mt-4 border-t border-gray-200">
+        <h3 class="sr-only">Categories</h3>
+        <ul
+          role="list"
+          class="px-2 py-3 font-medium text-gray-900"
+          *ngFor="let category of categories"
+        >
+          <li>
+            <a href="#" class="block px-2 py-3">{{ category.name }}</a>
+          </li>
+        </ul>
+      </form>
+    </div>
+  </div>
 </div>
