--- a/apps/shop/src/app/shared/header/header.component.html
+++ b/apps/shop/src/app/shared/header/header.component.html
@@ -35,14 +35,14 @@
             ></path>
           </svg>
         </button>
-        <a href="#" class="text-xl font-bold flex items-center lg:ml-2.5">
+        <div class="text-xl font-bold flex items-center lg:ml-2.5">
           <img
             src="https://demo.themesberg.com/windster/images/logo.svg"
             class="h-6 mr-2"
             alt="Windster Logo"
           />
           <span class="self-center whitespace-nowrap">OneShop Store</span>
-        </a>
+        </div>
       </div>
       <div class="flex items-center">
         <button
