Added Cart Page

--- a/apps/shop/src/app/pages/product-page/product-page.component.html
+++ b/apps/shop/src/app/pages/product-page/product-page.component.html
@@ -31,8 +31,8 @@
 
           <p-button
             label="Add to Cart"
-            icon="pi pi-cart"
-            styleClass="text-white bg-blue-500 border-blue-500"
+            icon="pi pi-cart-plus"
+            styleClass="text-white bg-blue-500 border-blue-500 p-button-sm"
             size="small"
           ></p-button>
         </div>
