Added LocalStorage Product Add
use  non-null assertion operator ("!") to tell typescript that local storage is not null; JSON.parse(localStorage.getItem('cart') ! );

--- a/apps/shop/src/app/pages/product-page/product-page.component.html
+++ b/apps/shop/src/app/pages/product-page/product-page.component.html
@@ -34,6 +34,7 @@
             icon="pi pi-cart-plus"
             styleClass="text-white bg-blue-500 border-blue-500 p-button-sm"
             size="small"
+            (onClick)="addToCart(product._id, 1)"
           ></p-button>
         </div>
 
